# texifast

./: .gitignore  .mise.toml  README.md  pyproject.toml  requirements-all.txt  requirements-cpu.txt  requirements-dev.txt  requirements-gpu.txt
.github/workflows/: docgen.yml  publish.yml  pytest.yml
benchmark/: README.md  benchmark.py
benchmark/memray/: memray-flamegraph-output.html  memray-flamegraph-output.optimum.iob.html
benchmark/memray/macOS/: memray-flamegraph-output.iob.html  memray-flamegraph-output.optimum.html
docs/: README.md  texifast.config.md  texifast.helpers.md  texifast.model.md  texifast.pipeline.md
src/texifast/: config.py  helpers.py  model.py  pipeline.py
tests/: model_revision.txt  test_pipeline.py
