[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "texifast"
version = "0.1.0"
description = "LaTeX and markdown OCR powered by texify, without bloated dependencies like torch or transformers."
readme = "README.md"
requires-python = ">=3.9,<=3.12"
dependencies = ["numpy>=2", "pillow>=10", "tokenizers>=0.20"]

[project.optional-dependencies]
cpu = ["onnxruntime>=1.19.0"]
gpu = ["onnxruntime-gpu>=1.19.0"]

[tool.pytest.ini_options]
pythonpath = "src"
addopts = ["--import-mode=importlib"]

[tool.pyright]
typeCheckingMode = "strict"
reportUnknownMemberType = false
reportAny = false
reportImplicitOverride = false
reportMissingTypeStubs = false
reportUnknownVariableType = false
reportUnknownArgumentType = false

[tool.ruff.lint]
extend-select = ["I", "N", "PERF", "UP"]

[tool.uv]
dev-dependencies = [
  "huggingface-hub>=0.25.2",
  "lazydocs>=0.4.8",
  "memray>=1.14.0",
  "pytest>=8.3.3",
]
